--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/main.min.css">
     </head>
     
     <body body>
@@ -89,8 +89,8 @@
                                     </svg>
                                 </a> 
                             </div>
-                            <h3 class="title">сучасні технології</h3>
-                            <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                            <h3 class="features__title">сучасні технології</h3>
+                            <p class="features__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                         </li>
                     </ul>
                 </div>
@@ -103,7 +103,7 @@
                         <li class="works__img">
                             <div class="works__wrap-details">
                                 <img src="./image/img-1.jpg" alt="програміст працює на робочому столі" width="370">
-                                <p class="works-details">Десктопні додатки</p>
+                                <p class="works__details">Десктопні додатки</p>
                             </div>
                         </li>
                         <li class="works__img">
