--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <!--  ----------------HEADER-------------------- -->
@@ -19,8 +19,8 @@
             <nav class="header__nav">
                 <a href="./index.html" class="header__logo"><span class="header__logo-part">Web</span>Studio</a>
                 <ul class="header__list">
-                    <li class="header__item"><a href="./index.html" class="header__link current">Студія</a></li>
-                    <li class="header__item"><a href="./portfolio.html" class="header__link">Портфоліо</a></li>
+                    <li class="header__item"><a href="./index.html" class="header__link">Студія</a></li>
+                    <li class="header__item"><a href="./portfolio.html" class="header__link current">Портфоліо</a></li>
                     <li class="header__item"><a href="" class="header__link">Контакти</a></li>
                 </ul>
             </nav>
